# cd0037-API-Development-and-Documentation-project

./: .gitignore
.github/workflows/: ci.yml
backend/: .gitignore  API_DOCUMENTATION.md  INSTALL_DEPENDENCIES.md  README.md  Run.sh  config.py  docker-compose.test.yml  docker-compose.yml  env.example  models.py  pyproject.toml  run-dev.sh  run-test.sh  test_flaskr.py  trivia_test.psql
backend/db/init/: trivia.sql
backend/db/test/: trivia_test_sqlalchemy.psql
backend/db/test/init/: trivia.sql
backend/flaskr/: __init__.py  models.py  route_helpers.py
backend/scripts/: Run.sh  run-dev.sh  run-test.sh
backend/tests/: test_flaskr.py
frontend/: package-lock.json
