[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aniso8601>=9.0.1",
    "click>=8.0.0",
    "docker-composer-v2>=0.8.8",
    "dotenv>=0.9.9",
    "flask>=2.0.0",
    "flask-cors>=3.0.10",
    "flask-restful>=0.3.9",
    "flask-sqlalchemy>=2.5.1",
    "itsdangerous>=2.0.0",
    "jinja2>=3.0.0",
    "markupsafe>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pyjwt>=2.11.0",
    "pytest>=8.4.2",
    "pytz>=2021.1",
    "six>=1.16.0",
    "sqlalchemy>=1.4.0",
    "werkzeug>=2.0.0",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

pythonpath = ["."]
addopts = "-ra -q"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s | %(levelname)s | - %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
